--- a/ConfirmationWindow.xaml
+++ b/ConfirmationWindow.xaml
@@ -19,17 +19,17 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <TextBlock Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Delete?"/></TextBlock>
+            <TextBlock x:Name="ViewDelete" Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Delete?"/></TextBlock>
             <TextBlock Margin="8,10,6,10" Name="TB_ViewElementRemove" Background="White" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Center" Grid.Column="1"  Grid.Row="1" ></TextBlock>
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="0,0,67.6,0.4" Width="182">
-                <Button IsDefault="True" Click="Accept_Click" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Yes">
+                <Button x:Name="buttYes" IsDefault="True" Click="Accept_Click" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Yes">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="0"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button IsCancel="True" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Cancel">
+                <Button x:Name="buttCancel" IsCancel="True" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Cancel">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="0"/>
