--- a/EditIncExp.xaml
+++ b/EditIncExp.xaml
@@ -19,19 +19,19 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <TextBlock Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Search"/><Run Text=" = "/></TextBlock>
+            <TextBlock x:Name="ViewSearch" Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Search"/><Run Text=" = "/></TextBlock>
 
             <TextBox x:Name="SearchInp" Text="{Binding searchElement}" Grid.Column="1" Margin="10,10,8,10" Background="White" FontSize="20" TextAlignment="Center" Foreground="Black" Grid.Row="1" />
 
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="0,0,67.6,0.4" Width="182">
-                <Button IsDefault="True" Click="Search_Click" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Search">
+                <Button x:Name="buttSearch" IsDefault="True" Click="Search_Click" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Search">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="0"/>
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button IsCancel="True" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Cancel">
+                <Button x:Name="buttCancel" IsCancel="True" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Cancel">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="0"/>
