--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -31,7 +31,7 @@
                     <StatusBarItem  Grid.Column="0" Height="45" Width="100" Background="{x:Null}" >
                         <Menu Height="40" Width="100" Background="{x:Null}" FontSize="24" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
                             <MenuItem Name="Menu" Header="Menu" Height="39" Width="90" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="{x:Null}" BorderBrush="{x:Null}">
-                                <MenuItem Name="settingMenu" Header="_Setting"/>
+                                <MenuItem Name="settingMenu" Header="_Setting" Click="SettingWindow"/>
                                 <Separator />
                                 <MenuItem Name="exitMenu" Header="_Exit" Click="ExitApp"/>
                             </MenuItem>
