--- a/SettingsWindow.xaml
+++ b/SettingsWindow.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="PersonalBudget_2._0.RemoveElement"
+﻿<Window x:Class="PersonalBudget_2._0.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersonalBudget_2._0"
-        Title="RemoveElement" Height="200" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None"
+        mc:Ignorable="d"
+        Title="SettingsWindow"  Height="200" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None"
         AllowsTransparency="True" Background="Transparent">
     <Border CornerRadius="20" Background="#faded0">
         <Grid>
@@ -19,12 +20,12 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <TextBlock x:Name="ViewSearch" Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Search"/><Run Text=" = "/></TextBlock>
+            <TextBlock x:Name="LanguageView" Margin="8,10,6,10" RenderTransformOrigin="0.49,0.142" FontSize="20" Foreground="Black" TextAlignment="Right" Grid.Row="1" ><Run Text="Language"/><Run Text=":"/></TextBlock>
 
-            <TextBox x:Name="SearchInp" Text="{Binding searchElement}" Grid.Column="1" Margin="10,10,8,10" Background="White" FontSize="20" TextAlignment="Center" Foreground="Black" Grid.Row="1" />
+            <ComboBox Name="ChoiceLanguage" Grid.Column="1" Margin="10,10,8,10" FontSize="20" Grid.Row="1" SelectionChanged="ChoiceLanguage_SelectionChanged"></ComboBox>
 
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="0,0,67.6,0.4" Width="182">
-                <Button x:Name="buttSearch" IsDefault="True" Click="Search_Click" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Search">
+                <Button x:Name="buttOk" IsDefault="True" Click="Accept_Click" MinWidth="60" Height="30" Margin="5,0,5,5.4" Background="#FF3A3A3A" Foreground="White" Content="Ok">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="0"/>
